# virtual-space-cadet

./: .gitattributes  Cargo.toml  README.md
doc/img/: outline.odp
docs/: conf.py  how_it_works.rst  index.rst  quickstart.rst
docs/keyboards/: index.rst  simple_ergonomics.rst  vim_cursor.rst
docs/keys/: advanced.rst  index.rst  layers.rst  simple.rst  utility.rst
keyboards/simple_ergonomics/: layers.json  matrix.json
keyboards/vim_cursor/: layers.json  matrix.json
libspacecadet/: Cargo.toml
libspacecadet/src/: input_keyboard.rs  keyboard_driver.rs  keys.rs  layer.rs  lib.rs  old_main.rs  output_keyboard.rs  parser.rs  test_io_keyboard.rs  virtual_keyboard_matrix.rs
spacecadet/: Cargo.toml
spacecadet/src/: main.rs  matrix_collector.rs
src/: main.rs
