[package]
name = "spacecadet"
version = "0.1.0"
authors = ["Andrew Hardin <andrew.hardin5+git@gmail.com>"]
edition = "2018"

[dependencies]
libspacecadet = {path = "../libspacecadet"}
evdev-rs = "0.2.0"
clap = "~2.32"

[[bin]]
name = "spacecadet"
path = "src/main.rs"

[[bin]]
name = "matrix_collector"
path = "src/matrix_collector.rs"